increase z-index of splash to avoid conflict with dframe

--- a/launcher.css
+++ b/launcher.css
@@ -1,6 +1,6 @@
 ﻿
 #splash {
-    z-index: 1000;
+    z-index: 11000;
     position: absolute;
     top: 0;
     left: 0;
